[project]
name = "anymal-c-velocity"
version = "0.1.0"
description = "An example of how to use a custom robot with an existing task in mjlab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mjlab = { path = "../mjlab", editable = true }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "1dc288cf1fa819fc3346ec5c9546e2cc2b7be667"}

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["anymal_c_velocity"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
anymal_c_velocity = "anymal_c_velocity"
